# SystemInfo

./: .gitignore  CMakeLists.txt
include/: CpuInfoL.hpp  MemoryInfo.hpp  SystemInfo.hpp
src/: CpuInfoL.cpp  MemoryInfo.cpp  SystemInfo.cpp
